# Runescape-Decanting-Calculator

./: .gitignore  Decanter.c  Decanter.h  Makefile  Makefile.in  README.md  config.h  config.status  configure  configure.ac  install.sh  rscanter
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
src/: Decanter.c  Makefile  Makefile.am  Makefile.in  rscanter
src/.deps/: Decanter.Po
